# semctx

./: .gitignore  .ignore  .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
src/semctx/: cli.py  version.py
src/semctx/commands/: blast_radius_command.py  grep_command.py  grep_command_support.py  index_command.py  model_selection_contract.py  output_format.py  regex_index_command.py  regex_index_command_support.py  runtime_context.py  search_code_command.py  search_identifiers_command.py  skeleton_command.py  tree_command.py
src/semctx/config/: runtime_settings.py
tests/integration/: test_cli_analysis_commands.py  test_cli_commands.py  test_cli_grep_command.py  test_cli_index_commands.py  test_cli_json_commands.py  test_cli_json_discovery_commands.py  test_cli_regex_index_commands.py
tests/unit/: search_command_test_support.py  semantic_identifier_fixtures.py  semantic_search_fixtures.py  test_blast_radius.py  test_chunker.py  test_cli.py  test_context_tree.py  test_embedding_provider.py  test_embeddings.py  test_file_skeleton.py  test_grep_command.py  test_grep_with_regex_index.py  test_index_ignore.py  test_index_lifecycle.py  test_index_manifest.py  test_index_store.py  test_parser.py  test_regex_index_builder.py  test_regex_index_candidates.py  test_regex_index_lifecycle.py  test_regex_index_store.py  test_search_code_command.py  test_search_command_target_dir_runtime.py  test_search_identifiers_command.py  test_search_intent.py  test_search_ranking.py  test_semantic_identifiers.py  test_semantic_search.py  test_walker.py
(+53 files in other folders)
