# Semctx package metadata.
# Defines uv-managed runtime and test settings.
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "semctx"
version = "0.1.0"
description = "CLI semantic codebase navigator inspired by Context+"
requires-python = ">=3.11"
dependencies = [
  "beartype>=0.19,<1",
  "google-auth>=2,<3",
  "litellm>=1.67,<2",
  "pathspec>=0.12,<1",
  "pydantic>=2.6,<3",
  "tree-sitter-go>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-kotlin>=1",
  "tree-sitter-python>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter>=0.24,<1",
  "typer>=0.12,<1",
]

[project.scripts]
semctx = "semctx.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=8.1,<9",
  "ty>=0.0.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semctx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [".mcp_data"]
